--- a/AppWeek3/package.json
+++ b/AppWeek3/package.json
@@ -23,6 +23,7 @@
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
+    "react-native-svg": "^13.14.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
